fix webc-app-error-toast z-index

--- a/code/assets/skin.css
+++ b/code/assets/skin.css
@@ -7,6 +7,10 @@ webc-app-container {
     position: relative;
 }
 
+webc-app-error-toast{
+    z-index: 100;
+}
+
 webc-app-menu[mode=vertical] {
     --background: #328569;
     --min-width: 240px;
